# Projects

./: README.md
Image Processing/: Makefile  bmp.h  checking_values.c  checking_values.h  color_replacement.c  color_replacement.h  correct.c  correct.h  cut_on_lines.c  cut_on_lines.h  filter_rgb_component.c  filter_rgb_component.h  kyrsach1.2.c  (+7 more)
OOP_game/: CMakeLists.txt  LOGS.txt  SAVE.txt  Sfield.txt  Splayer.txt  a.out  key_for_start.txt  settings.txt  tmp.cpp
OOP_game/CreateField/: FieldGenerator.h  Generator.h
OOP_game/CreateField/Rules/: Arm.h  Enemy.h  Hp.h  Trap.h  Wall.h  Win.h
OOP_game/Events/: CreateEvent.cpp  CreateEvent.h  Event.h  Event_Arm.cpp  Event_Arm.h  Event_Damage.cpp  Event_Damage.h  Event_Enemy.cpp  Event_Enemy.h  Event_Hp.cpp  Event_Hp.h  Event_Win.cpp  Event_Win.h  Game_events.h  Profit_events.h  Waste_events.h
OOP_game/Exceptions/: FileExp.cpp  FileExp.h  GameExp.cpp  GameExp.h  LoadExp.cpp  LoadExp.h  SaveExp.cpp  SaveExp.h
OOP_game/Factory/: Factory.h  FactoryArm.cpp  FactoryArm.h  FactoryDamage.cpp  FactoryDamage.h  FactoryEnemy.cpp  FactoryEnemy.h  FactoryHp.cpp  FactoryHp.h  FactoryWin.cpp  FactoryWin.h
OOP_game/Info/: Enums.h  InfoLog.cpp  InfoLog.h
OOP_game/Logging/: Logger.cpp  Logger.h  Message.cpp  Message.h  Subject.cpp  Subject.h
OOP_game/Logs/: ObsError.cpp  ObsError.h  ObsGame.cpp  ObsGame.h  ObsStatus.cpp  ObsStatus.h  Observer.h
OOP_game/Output/: LogCmd.cpp  LogCmd.h  LogFile.cpp  LogFile.h  Output.h
OOP_game/Saving/: Hashing.h  Save_Load_Field.cpp  Save_Load_Field.h  Save_Load_Player.cpp  Save_Load_Player.h
(+36 files in other folders)
